####################################################### 
#                                                     #  
# Copyright (C) 2014                                  #
# Author: Uriel Martinez-Hernandez                    #
# email: uriel.martinez@sheffield.ac.uk               #
#                                                     #
#######################################################

add_subdirectory(test_txzy)
